<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.15">
  <DUT Name="ST_ActuatorInOut_TC" Id="{d2e2bc8d-09b2-4dd6-88d5-5e1d197632fa}">
    <Declaration><![CDATA[TYPE ST_ActuatorInOut_TC :
STRUCT
	bI_HomePosition :BOOL;							// Sygnał z krańcówki otwarcia
	bI_WorkPosition :BOOL;							// Sygnał z krańcówki zamknięcia
	bQ_Home :BOOL:= FALSE;							// Sygnał do zaworu otwierania (w przypadku zaworu jednocewkowego podłączyć tylko to wyjście)
	bQ_Work :BOOL:= FALSE;							// Sygnał do zaworu zamykania
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>